--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fatec News</title>
     <link rel="stylesheet" href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/CSS/style.css">
     <script src="/assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -107,7 +107,6 @@
         </div>
         <div class="album py-5 bg-light">
             <div class="container">
-
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                         <div class="card shadow-sm">
@@ -352,7 +351,6 @@
                     </ul>
                 </div>
             </footer>
-        </div>
     </main>
 </body>
 
