--- a/index.html
+++ b/index.html
@@ -33,23 +33,7 @@
 
                     <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
                         <input type="search" class="form-control" placeholder="Pesquise aqui..." aria-label="Pesquisa">
-                    </form>
-
-                    <div class="dropdown text-end">
-                        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="/assets/IMG/logo_F1.png" alt="mdo" width="32" height="32" class="rounded-circle">
-                        </a>
-                        <ul class="dropdown-menu text-small">
-                            <li><a class="dropdown-item" href="#">Adicionar post</a></li>
-                            <li><a class="dropdown-item" href="#">Configurações</a></li>
-                            <li><a class="dropdown-item" href="#">Perfil</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Sair</a></li>
-                        </ul>
-                    </div>
+                    </form>             
                 </div>
             </div>
         </header>
@@ -114,8 +98,7 @@
                         <div class="card shadow-sm">
                             <img src="/assets/IMG/godofwar-noticia.png" width="100%" height="225"></img>
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Noticia God Of War</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -129,8 +112,7 @@
                         <div class="card shadow-sm">
                             <img src="/assets/IMG/eldenring-noticia.jpg" width="100%" height="225"></img>
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Noticia Elden Ring</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -144,8 +126,7 @@
                         <div class="card shadow-sm">
                             <img src="/assets/IMG/gameawards-noticia.jpg" width="100%" height="225"></img>
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Noticia Game Awards</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -160,8 +141,7 @@
                         <div class="card shadow-sm">
                             <img src="/assets/IMG/riomajor-noticia.png" width="100%" height="225"></img>
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Noticia Major Rio</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -175,8 +155,7 @@
                         <div class="card shadow-sm">
                             <img src="/assets/IMG/cod-mw2-noticia.jpg" width="100%" height="225"></img>
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Noticia COD MW2</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -190,8 +169,7 @@
                         <div class="card shadow-sm">
                             <img src="/assets/IMG/sonic-frontiers-noticia.jpg" width="100%" height="225"></img>
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Noticia Sonic</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -206,8 +184,7 @@
                         <div class="card shadow-sm">
                             <img src="/assets/IMG/pokemon-noticia.jpg" width="100%" height="225"></img>
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Noticia Pokemon</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -221,8 +198,7 @@
                         <div class="card shadow-sm">
                             <img src="/assets/IMG/assassinscreed-noticia.jpg" width="100%" height="225"></img>
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Noticia Assassins Creed</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -236,8 +212,7 @@
                         <div class="card shadow-sm">
                             <img src="/assets/IMG/supermario-noticia.jpg" width="100%" height="225"></img>
                             <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Noticia Filme Mario</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -252,15 +227,15 @@
         </div>
         <div class="container">
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-                <p class="col-md-4 mb-0 text-muted">&copy; 2022 Company, Inc</p>
+                <p class="col-md-4 mb-0 text-muted">&copy; 2022 Fatec News LTDA.</p>
                 <a href="/assets/IMG/logo_F1.png"
                     class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"></a>
                 <ul class="nav col-md-4 justify-content-end">
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Noticias</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Newsletter</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Sobre Nós</a></li>
                 </ul>
             </footer>
         </div>
