pagina-login-e-cadastro

--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
                         <li><a href="#" class="nav-link px-2 link-dark">Sobre nós</a></li>
                     </ul>
 
-                    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                    <form class="col-3 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
                         <input type="search" class="form-control" placeholder="Pesquise aqui..." aria-label="Pesquisa">
-                    </form>             
+                    </form> 
+                    <div class="col-md-2 text-end">
+                        <a href="/login.html"><button type="button" class="btn btn-outline-primary me-2">Login</button></a>
+                        <a href="/join.html"><button type="button" class="btn btn-primary">Cadastre-se</button></a>
+                    </div>
+                    </header>            
                 </div>
             </div>
         </header>
