--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
                         <li><a href="#" class="nav-link px-2 link-dark">Notícias</a></li>
-                        <li><a href="#" class="nav-link px-2 link-dark">Newsletter</a></li>
-                        <li><a href="#" class="nav-link px-2 link-dark">FAQ</a></li>
-                        <li><a href="#" class="nav-link px-2 link-dark">Sobre nós</a></li>
+                        <li><a href="/newsletter.html" class="nav-link px-2 link-dark">Newsletter</a></li>
+                        <li><a href="/faq.html" class="nav-link px-2 link-dark">FAQ</a></li>
+                        <li><a href="/sobre.html" class="nav-link px-2 link-dark">Sobre nós</a></li>
                     </ul>
 
                     <form class="col-3 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
